# Pong

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.cpp  pong.cpp  pong.h  pong.h.autosave
src/engine/: render_open_gl.h
src/engine/context/: context.cpp  context.h
src/engine/control/: control.h
src/engine/display/: display.cpp  display.h
src/engine/scene/: mesh.cpp  mesh.h  scene.cpp  scene.h
src/engine/shader/: shader.cpp  shader.h
src/engine/style/: colors.h
src/engine/types/: color.h
src/engine/utilities/: inpitUtilities.cpp  inpitUtilities.h  inpit_utilities.cpp  inpit_utilities.h
src/engine/window/: main_window.h
src/game/: collider.cpp  collider.h  game.cpp  game.h  types.h
src/shaders/: default.frag  default.vert
